--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm install --omit=dev"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "node-fetch": "^2.7.0",
