Initial commit: KEK Monitor Bot by HB (@onlyfun5)

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,47 @@
 # Discord Configuration
-DISCORD_BOT_TOKEN=your_bot_token
-DISCORD_CLIENT_ID=your_client_id
-DISCORD_GUILD_ID=your_server_id
-DISCORD_TWEETS_CHANNEL=channel_id_for_tweets
-DISCORD_VIP_CHANNEL=channel_id_for_vip
-DISCORD_WALLETS_CHANNEL=channel_id_for_wallets
-DISCORD_SOLANA_CHANNEL=channel_id_for_solana
+DISCORD_BOT_TOKEN=your_bot_token                    # Bot token from Discord Developer Portal
+DISCORD_CLIENT_ID=your_client_id                    # Application ID from Discord Developer Portal
+DISCORD_GUILD_ID=your_server_id                     # Server ID where bot will operate
+DISCORD_TWEETS_CHANNEL=channel_id_for_tweets        # Channel for general tweet notifications
+DISCORD_VIP_CHANNEL=channel_id_for_vip             # Channel for VIP account tweets
+DISCORD_WALLETS_CHANNEL=channel_id_for_wallets     # Channel for wallet tracking notifications
+DISCORD_SOLANA_CHANNEL=channel_id_for_solana       # Channel for Solana-related tweets
 
-# Twitter API Configuration
-TWITTER_API_KEY=your_twitter_api_key
-TWITTER_API_KEY_SECRET=your_twitter_api_secret
-TWITTER_ACCESS_TOKEN=your_access_token
-TWITTER_ACCESS_TOKEN_SECRET=your_access_token_secret 
-TWITTER_BEARER_TOKEN=your_bearer_token
+# Twitter API Configuration (v2)
+TWITTER_API_KEY=your_twitter_api_key               # API Key from Twitter Developer Portal
+TWITTER_API_KEY_SECRET=your_twitter_api_secret     # API Key Secret
+TWITTER_ACCESS_TOKEN=your_access_token             # Access Token
+TWITTER_ACCESS_TOKEN_SECRET=your_access_token_secret # Access Token Secret
+TWITTER_BEARER_TOKEN=your_bearer_token             # Bearer Token for v2 API
 
-# Twilio Configuration (Optional)
-TWILIO_ACCOUNT_SID=your_twilio_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=your_twilio_phone
+# Twilio Configuration (Optional - for SMS alerts)
+TWILIO_ACCOUNT_SID=your_twilio_sid                # Twilio Account SID
+TWILIO_AUTH_TOKEN=your_twilio_auth_token          # Twilio Auth Token
+TWILIO_PHONE_NUMBER=your_twilio_phone             # Twilio Phone Number with country code
 
-# Helius Configuration
-HELIUS_API_KEY=your_helius_api_key
-HELIUS_WEBHOOK_URL=your_helius_webhook_url
+# Helius Configuration (Solana)
+HELIUS_API_KEY=your_helius_api_key                # Helius API Key
+HELIUS_WEBHOOK_URL=your_helius_webhook_url        # Public URL for webhook endpoints
+HELIUS_MIN_SWAP_VALUE=100                         # Minimum USD value for swap notifications (default: 100)
+HELIUS_MIN_SMS_SWAP_VALUE=1000                    # Minimum USD value for SMS alerts (default: 1000)
+HELIUS_WEBHOOK_SECRET=your_webhook_secret         # Secret for webhook verification (optional)
 
-# Birdeye Configuration
-BIRDEYE_API_KEY=your_birdeye_api_key
+# Birdeye Configuration (Token Analytics)
+BIRDEYE_API_KEY=your_birdeye_api_key              # Birdeye API Key for token data
 
 # Runtime Configuration
-NODE_ENV=production
-MONITORING_INTERVAL=60000
-NPM_CONFIG_PRODUCTION=true 
+NODE_ENV=production                               # Environment: production or development
+DEBUG=false                                       # Enable detailed debug logging
+MONITORING_INTERVAL=60000                         # Tweet check interval in milliseconds (default: 60000)
+MAX_ACCOUNTS_PER_BATCH=25                        # Maximum accounts per batch request (default: 25)
+MAX_TWEETS_PER_ACCOUNT=5                         # Maximum tweets to fetch per account (default: 5)
+LOG_LEVEL=info                                   # Logging level: debug, info, warn, error (default: info)
+
+# Rate Limiting Configuration
+RATE_LIMIT_SAFETY_MARGIN=0.9                     # Safety margin for rate limits (default: 0.9)
+BATCH_MIN_INTERVAL=5000                          # Minimum interval between batches in ms (default: 5000)
+MAX_RETRIES=3                                    # Maximum retry attempts for failed requests (default: 3)
+RETRY_DELAY=10000                                # Delay between retries in ms (default: 10000)
+
+# NPM Configuration
+NPM_CONFIG_PRODUCTION=true                       # Production mode for npm install 
