--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
+# Dependencies
 node_modules/
+package-lock.json
+
+# Environment
 .env
+.env.test
+.env.local
+.env.development
+.env.production
+
+# Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# IDE/Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Testing
+coverage/
+.nyc_output/
+
+# Build
+dist/
+build/
+out/
+
+# Data files
+data/
+*.db
+*.sqlite
